--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "chat-app",
+  "name": "room-system",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon start",
-    "start": "npm index.js"
+    "start": "node ./server.js",
+    "dev": "nodemon ./server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.2",
-    "fs": "^0.0.1-security",
+    "http": "^0.0.1-security",
     "path": "^0.12.7",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
